# poetry-setup

./: .gitignore  .travis.yml  Pipfile  README.md  poetry_setup.py  pyproject.toml  requirements.txt  setup.py  tests.py
.pytest_cache/v/cache/: nodeids
assets/: scheme.dia
example/: constraints.txt  pyproject.toml  requirements.txt  setup.py
poetry_setup/: __init__.py  __main__.py  core.py
poetry_setup/templates/: setup.py.j2
templates/: requirements.txt  setup.py
