[tool.poetry]
name = "poetry-setup"
version = "0.3.6"
description = "make setup.py (setutools) from pyproject.toml (poetry)"
authors = [
    "Gram Orsinium <master_fess@mail.ru>"
]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/orsinium/poetry-setup"
repository = "https://github.com/orsinium/poetry-setup"
keywords = ["packaging", "dependency", "poetry", "setuptools", "pip"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.4"
autopep8 = "*"
jinja2 = "*"
poetry = "*"
yapf = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[tool.poetry.scripts]
poetry-setup = "poetry_setup.core:main"
