[tool.poetry]
name = "example"
version = "0.1.0"
description = "The description of the package"
readme = 'README.md'  # Markdown files are supported
license = "MIT"
authors = ["Sébastien Eustace <sebastien@eustace.io>"]

repository = "https://github.com/sdispater/poetry"
homepage = "https://github.com/sdispater/poetry"


keywords = ['packaging', 'poetry']
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "~2.7 || ^3.2"  # Compatible python versions must be declared here
toml = "^0.9"
django = "1.11"
deal = ">=0.5"
# Dependencies with extras
requests = { version = "^2.13", extras = [ "security" ] }
# Python specific dependencies with prereleases allowed
pathlib2 = { version = "^2.2", python = "~2.7", allows-prereleases = true }
# Git dependencies
cleo = { git = "https://github.com/sdispater/cleo.git", branch = "master" }

# Optional dependencies (extras)
pendulum = { version = "^1.4", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.4"

[tool.poetry.scripts]
my-script = 'example.core:main'
